--- a/css/style.css
+++ b/css/style.css
@@ -462,6 +462,73 @@ body {
 .form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
   opacity: 1; }
 
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 9999;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .3s; }
+  .popup__content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 75%;
+    background-color: rgba(255, 255, 255, 0.92);
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
+    border-radius: 3px;
+    display: table;
+    overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.5);
+    transition: all .6s .25s; }
+  .popup__left {
+    width: 33.333333%;
+    display: table-cell; }
+  .popup__right {
+    width: 66.666666%;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 3rem 5rem; }
+  .popup__img {
+    display: block;
+    width: 100%; }
+  .popup-text {
+    font-size: 1.4rem;
+    margin-bottom: 1rem;
+    -moz-column-count: 2;
+    -moz-column-gap: 4rem;
+    -moz-column-rule: 1px solid #cc1d54;
+    column-count: 2;
+    column-gap: 4rem;
+    column-rule: 1px solid #cc1d54;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto; }
+  .popup:target {
+    opacity: 1;
+    visibility: visible; }
+  .popup:target .popup__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1); }
+  .popup__close:link, .popup__close:visited {
+    color: #777;
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+    font-size: 3rem;
+    text-decoration: none;
+    display: inline-block;
+    transition: all .2s;
+    line-height: 1; }
+  .popup__close:hover {
+    color: #cc1d54; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(191, 107, 134, 0.5), rgba(204, 29, 84, 0.5)), url(../img/ffood.jpg);
@@ -507,8 +574,8 @@ body {
     width: calc(3 * ((100% - 3 * 2rem) / 4) + 2 * 2rem); }
 
 .footer {
-  background-color: rgba(51, 51, 51, 0.6);
-  padding: 5rem 2rem;
+  background-color: rgba(0, 0, 0, 0.84);
+  padding: 3.5rem 2.5rem;
   font-size: 1.4rem;
   color: #fff; }
   .footer__logo {
@@ -534,9 +601,9 @@ body {
       display: inline-block;
       transition: all .2sec; }
     .footer__link:hover, .footer__link:active {
-      color: #bf6b86;
+      color: #82072e;
       box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
-      transform: rotate(30deg) scale(1.3); }
+      transform: scale(1.4); }
   .footer__copyright {
     border-top: 1px solid #fff7f9;
     padding-top: 2rem;
