--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
-	background-color: rgba($color-grey-dark-3, .6);
-	padding: 5rem 2rem;
+	background-color: rgba($color-black, .84);
+	padding: 3.5rem 2.5rem;
 	font-size: 1.4rem;
 	color: #fff;
 
@@ -45,9 +45,10 @@
 
 		&:hover,
 		&:active {
-			color: $color-light;
+			color: $color-dark;
 			box-shadow: 0 1rem 2rem rgba($color-black, .4);
-			transform: rotate(30deg) scale(1.3);
+			// transform: rotate(30deg) scale(1.3);
+			transform: scale(1.4);
 		}
 	}
 	&__copyright {
