--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,21 @@
   padding: 0;
   box-sizing: border-box; }
 
+html {
+  font-size: 62.5%; }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (max-width: 37.5em) {
+    html {
+      font-size: 10%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
+
 body {
   padding: 30px; }
 
@@ -48,7 +63,7 @@ body {
 
 .heading-pmain {
   display: block;
-  font-size: 60px;
+  font-size: 5rem;
   letter-spacing: 20.1px;
   font-weight: 400;
   animation-name: moveLeft;
@@ -57,7 +72,7 @@ body {
 
 .heading-smain {
   display: block;
-  font-size: 20px;
+  font-size: 2.5rem;
   font-weight: 700;
   letter-spacing: 11.4px;
   animation-name: moveRight;
@@ -189,7 +204,7 @@ body {
   transition: all .4s; }
 
 .btn-text:link, .btn-text:visited {
-  font-size: 1.4rem;
+  font-size: 2.4rem;
   color: #cc1d54;
   display: inline-block;
   text-decoration: none;
@@ -228,6 +243,7 @@ body {
 .card {
   perspective: 150rem;
   -moz-perspective: 150rem;
+  -webkit-perspective: 150rem;
   position: relative;
   height: 52rem; }
   .card__side {
@@ -332,7 +348,7 @@ body {
   border-radius: 3px;
   padding: 6rem;
   padding-left: 9rem;
-  font-size: 1.4rem;
+  font-size: 2.4rem;
   transform: skewX(-12deg); }
   .story__shape {
     width: 15rem;
@@ -342,7 +358,7 @@ body {
     shape-outside: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
     -webkit-clip-path: circle(50% at 50% 50%);
-    transform: translateX(-3rem) skewX(12deg);
+    transform: translateX(-3rem) translateY(-3rem) skewX(12deg);
     position: relative; }
   .story__image {
     height: 100%;
@@ -430,7 +446,7 @@ body {
   display: none; }
 
 .form__radio-label {
-  font-size: 1.4rem;
+  font-size: 2.4rem;
   cursor: pointer;
   position: relative;
   padding-left: 2.2rem; }
@@ -530,12 +546,12 @@ body {
     color: #cc1d54; }
 
 .header {
-  height: 95vh;
+  height: 80vh;
   background-image: linear-gradient(to right bottom, rgba(191, 107, 134, 0.5), rgba(204, 29, 84, 0.5)), url(../img/ffood.jpg);
   background-size: cover;
   background-position: center;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85vh);
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85vh);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 73vh);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 73vh);
   position: relative; }
 
 .logo-box {
@@ -548,7 +564,7 @@ body {
 
 .row {
   max-width: 114rem;
-  margin: 0 auto;
+  margin: 0 1em;
   text-align: center; }
   .row:not(:last-child) {
     margin-bottom: 6rem; }
@@ -565,13 +581,13 @@ body {
   .row .col-1-of-3 {
     width: calc((100% - 2 * 2rem) / 3); }
   .row .col-2-of-3 {
-    width: calc(2 * ((100% - 2 * 2rem) / 3) + 2rem); }
+    width: calc( 2 * ((100% - 2 * 2rem) / 3) + 2rem); }
   .row .col-1-of-4 {
     width: calc((100% - 3 * 2rem) / 4); }
   .row .col-2-of-4 {
-    width: calc(2 * ((100% - 3 * 2rem) / 4) + 2rem); }
+    width: calc( 2 * ((100% - 3 * 2rem) / 4) + 2rem); }
   .row .col-3-of-4 {
-    width: calc(3 * ((100% - 3 * 2rem) / 4) + 2 * 2rem); }
+    width: calc( 3 * ((100% - 3 * 2rem) / 4) + 2 * 2rem); }
 
 .footer {
   background-color: rgba(0, 0, 0, 0.84);
