--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,7 +1,28 @@
 * {
-	margin:0;
-	padding:0;
+	margin: 0;
+	padding: 0;
 	box-sizing: border-box;
+}
+
+html {
+	//This defines 1rem
+	font-size: 62.5%;
+
+	@include respond(tab-land) {
+		font-size: 56.25%;
+	}
+
+	@include respond(tab-port) {
+		font-size: 50%;
+	}
+
+	// @include respond(phone) {
+	// 	font-size: 10%;
+	// }
+
+	@include respond(widescreen) {
+		font-size: 75%;
+	}
 }
 
 body {
