--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,171 +1,198 @@
 .card {
-    perspective: 150rem;
-    -moz-perspective: 150rem;
-    position: relative;
-    height: 52rem;
+	perspective: 150rem;
+	-moz-perspective: 150rem;
+	-webkit-perspective: 150rem;
+	position: relative;
+	height: 52rem;
 
-    &__side {
-        font-size: 3rem;
+	&__side {
+		font-size: 3rem;
 
-        height: 52rem;
-        transition: all .8s ease;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        backface-visibility: hidden;
-        -webkit-backface-visibility: hidden;
-        -moz-backface-visibility: hidden;
-        border-radius: 3px;
-        overflow: hidden;
-        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+		height: 52rem;
+		transition: all .8s ease;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		backface-visibility: hidden;
+		-webkit-backface-visibility: hidden;
+		-moz-backface-visibility: hidden;
+		border-radius: 3px;
+		overflow: hidden;
+		box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
 
-        &--front {
-            color: $color-black;
-            background-color: $color-white;
-        }
+		&--front {
+			color: $color-black;
+			background-color: $color-white;
+		}
 
-        &--back {
-            color: $color-white;
-            transform: rotateY(180deg);
+		&--back {
+			color: $color-white;
+			transform: rotateY(180deg);
 
-            &-1 {
-                background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
-            }
+			&-1 {
+				background-image: linear-gradient(
+					to right bottom,
+					$color-secondary-light,
+					$color-secondary-dark
+				);
+			}
 
-            &-2 {
-                background-image: linear-gradient(to right bottom, $color-red-light, $color-red-dark);
-            }
+			&-2 {
+				background-image: linear-gradient(
+					to right bottom,
+					$color-red-light,
+					$color-red-dark
+				);
+			}
 
-            &-3 {
-                background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
-            }
-        }
-    }
+			&-3 {
+				background-image: linear-gradient(
+					to right bottom,
+					$color-tertiary-light,
+					$color-tertiary-dark
+				);
+			}
+		}
+	}
 
-    
+	&:hover &__side--front {
+		transform: rotateY(-180deg);
+	}
 
-    &:hover &__side--front {
-        transform: rotateY(-180deg);
-    }
+	&:hover &__side--back {
+		transform: rotateY(0);
+	}
 
-    &:hover &__side--back {
-        transform: rotateY(0);
-    }
+	//Front side stuff
 
+	&__picture {
+		background-size: cover;
+		height: 23rem;
+		background-blend-mode: screen;
+		-webkit-clip-path: polygon(
+			0 0,
+			100% 0,
+			100% 85%,
+			0 100%
+		);
+		clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+		border-top-left-radius: 3px;
+		border-top-right-radius: 3px;
 
+		&--1 {
+			background-image: linear-gradient(
+					to right bottom,
+					$color-secondary-light,
+					$color-secondary-dark
+				),
+				url(../img/salads.jpg);
+		}
+		&--2 {
+			background-image: linear-gradient(
+					to right bottom,
+					$color-red-light,
+					$color-red-dark
+				),
+				url(../img/shakes.jpg);
+		}
+		&--3 {
+			background-image: linear-gradient(
+					to right bottom,
+					$color-tertiary-light,
+					$color-tertiary-dark
+				),
+				url(../img/pizza.jpg);
+		}
+	}
 
-//Front side stuff
+	&__heading {
+		font-size: 1.8rem;
+		font-weight: 250;
+		color: $color-white;
+		text-align: right;
+		position: absolute;
+		top: 12rem;
+		right: 2rem;
+		text-transform: uppercase;
+		width: 75%;
+	}
 
-    &__picture {
-        background-size: cover;
-        height: 23rem;
-        background-blend-mode: screen;
-        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-        border-top-left-radius: 3px;
-        border-top-right-radius: 3px;
+	&__heading-span {
+		padding: 1rem 1.5rem;
+		-webkit-box-decoration-break: clone;
+		box-decoration-break: clone;
 
-        &--1 {
-            background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark),
-            url(../img/salads.jpg);
-        }
-        &--2 {
-            background-image: linear-gradient(to right bottom, $color-red-light, $color-red-dark),
-            url(../img/shakes.jpg);
-        }
-        &--3 {
-            background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark),
-            url(../img/pizza.jpg);
-        }
-    }
+		&-1 {
+			background-image: linear-gradient(
+				to right bottom,
+				rgba($color-secondary-light, .85),
+				rgba($color-secondary-dark, .85)
+			);
+		}
 
-    &__heading{
-        font-size: 1.8rem;
-        font-weight: 250;
-        color: $color-white;
-        text-align: right;
-        position: absolute;
-        top: 12rem;
-        right: 2rem;
-        text-transform: uppercase;
-        width: 75%;
-    }
+		&-2 {
+			background-image: linear-gradient(
+				to right bottom,
+				rgba($color-red-light, .85),
+				rgba($color-red-dark, .85)
+			);
+		}
 
-    &__heading-span {
-        padding: 1rem 1.5rem;
-        -webkit-box-decoration-break: clone;
-        box-decoration-break: clone;
+		&-3 {
+			background-image: linear-gradient(
+				to right bottom,
+				rgba($color-tertiary-light, .85),
+				rgba($color-tertiary-dark, .85)
+			);
+		}
+	}
 
-        &-1 {
-            background-image:linear-gradient(to right bottom, 
-            rgba($color-secondary-light, .85), 
-            rgba($color-secondary-dark, .85));
-        }
+	&__details {
+		padding: 1.5rem;
 
-        &-2 {
-            background-image:linear-gradient(to right bottom, 
-            rgba($color-red-light, .85), 
-            rgba($color-red-dark, .85));
-        }
+		ul {
+			list-style: none;
+			width: 80%;
+			margin: 0 auto;
 
-        &-3 {
-            background-image:linear-gradient(to right bottom, 
-            rgba($color-tertiary-light, .85), 
-            rgba($color-tertiary-dark, .85));
-        }
-    }
+			li {
+				text-align: center;
+				font-size: 1.5rem;
+				padding: 1rem;
 
-    &__details {
+				&:not(:last-child) {
+					border-bottom: 1px solid
+						$color-pink-light;
+				}
+			}
+		}
+	}
 
-        padding: 1.5rem;
+	// Back side stylling
 
-        ul{
-            list-style:none;
-            width: 80%;
-            margin: 0 auto;
+	&__cta {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 90%;
+		text-align: center;
+	}
 
-            li {
-                text-align: center;
-                font-size: 1.5rem;
-                padding: 1rem;
+	&__price-box {
+		text-align: center;
+		margin-bottom: 8rem;
+		color: $color-white;
+	}
 
-                &:not(:last-child){
-                    border-bottom: 1px solid $color-pink-light;
-
-                }
-            }
-        }
-    }
-
-
-    // Back side stylling
-
-    &__cta {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 90%;
-        text-align: center;
-    }
-
-    &__price-box {
-        text-align: center;
-        margin-bottom: 8rem;
-        color: $color-white;
-
-    }
-
-    &__price-only{
-        font-size: 1.4rem;
-        text-transform: uppercase;
-        // font-weight: 200;
-
-    }
-    &__price-value{
-        font-size: 4rem;
-        font-weight: 10;
-    }
-
+	&__price-only {
+		font-size: 1.4rem;
+		text-transform: uppercase;
+		// font-weight: 200;
+	}
+	&__price-value {
+		font-size: 4rem;
+		font-weight: 10;
+	}
 }
