--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,13 +1,20 @@
 .header {
-	height: 95vh;
-	background-image: linear-gradient(to right bottom, 
-	rgba(191, 107, 134, 0.5), 
-	rgba(204, 29, 84, 0.5)),
-	url(../img/ffood.jpg);
+	height: 80vh;
+	background-image: linear-gradient(
+			to right bottom,
+			rgba(191, 107, 134, 0.5),
+			rgba(204, 29, 84, 0.5)
+		),
+		url(../img/ffood.jpg);
 	background-size: cover;
 	background-position: center;
-	-webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85vh);
-	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85vh);
+	-webkit-clip-path: polygon(
+		0 0,
+		100% 0,
+		100% 100%,
+		0 73vh
+	);
+	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 73vh);
 	position: relative;
 }
 
@@ -15,7 +22,6 @@
 	position: absolute;
 	top: 40px;
 	left: 40px;
-
 }
 .logo {
 	height: 75px;
