--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,21 +1,17 @@
 .header {
 	height: 80vh;
-	background-image: linear-gradient(
-			to right bottom,
-			rgba(191, 107, 134, 0.5),
-			rgba(204, 29, 84, 0.5)
-		),
-		url(../img/ffood.jpg);
+	background-image: linear-gradient(to right bottom, rgba(191, 107, 134, 0.5), rgba(204, 29, 84, 0.5)),
+		url(../img/ffood-small.jpg);
 	background-size: cover;
 	background-position: center;
-	-webkit-clip-path: polygon(
-		0 0,
-		100% 0,
-		100% 100%,
-		0 73vh
-	);
+	-webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 73vh);
 	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 73vh);
 	position: relative;
+}
+
+@media (min-resolution: 192dpi) {
+	background-image: linear-gradient(to right bottom, rgba(191, 107, 134, 0.5), rgba(204, 29, 84, 0.5)),
+		url(../img/ffood.jpg);
 }
 
 .logo-box {
