--- a/css/style.css
+++ b/css/style.css
@@ -646,7 +646,7 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 73vh);
   position: relative; }
 
-@media (min-resolution: 192dpi) {
+@media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) {
   background-image: linear-gradient(to right bottom, rgba(191, 107, 134, 0.5), rgba(204, 29, 84, 0.5)), url(../img/ffood.jpg); }
 
 .logo-box {
